--- a/dw/kettle.properties
+++ b/dw/kettle.properties
@@ -4,8 +4,16 @@
 #  ~/.kettle/kettle.properties
 #
 
+#localhost
 PREVDB_HOST=localhost
 PREVDB_PORT=5432
+PREVDB_BASE=prevdb
+PREVDB_USER=prevdb_user
+PREVDB_PASS=pr3v
+
+#LINC Server
+PREVDB_HOST=192.168.0.249
+PREVDB_PORT=2035
 PREVDB_BASE=prevdb
 PREVDB_USER=prevdb_user
 PREVDB_PASS=pr3v
