Fix default db server

--- a/dw/kettle.properties
+++ b/dw/kettle.properties
@@ -5,15 +5,15 @@
 #
 
 #localhost
-PREVDB_HOST=localhost
+PREVDB_HOST=prevdb
 PREVDB_PORT=5432
 PREVDB_BASE=prevdb
 PREVDB_USER=prevdb_user
 PREVDB_PASS=pr3v
 
 #LINC Server
-PREVDB_HOST=192.168.0.249
-PREVDB_PORT=2035
-PREVDB_BASE=prevdb
-PREVDB_USER=prevdb_user
-PREVDB_PASS=pr3v
+#PREVDB_HOST=192.168.0.249
+#PREVDB_PORT=2035
+#PREVDB_BASE=prevdb
+#PREVDB_USER=prevdb_user
+#PREVDB_PASS=pr3v
